--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "angular": "^1.6.4",
+    "angular-mocks": "^1.6.4",
     "angular-route": "^1.6.4",
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
@@ -15,7 +16,8 @@
     "jasmine-core": "^2.6.2",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.1.1",
-    "karma-jasmine": "^1.1.0"
+    "karma-jasmine": "^1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2"
   },
   "scripts": {
     "test": "jasmine",
