--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "angular-route": "^1.6.4",
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
+    "jquery": "^3.2.1",
     "mongoose": "^4.4.15"
   },
   "devDependencies": {
