--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
     "jquery": "^3.2.1",
-    "mongoose": "^4.4.15"
+    "mongoose": "^4.4.15",
+    "multer": "^1.3.0"
   },
   "devDependencies": {
     "jasmine": "^2.6.0",
