--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "angular-mocks": "^1.6.4",
     "angular-route": "^1.6.4",
     "body-parser": "^1.15.1",
-    "express": "^4.13.4",
+    "express": "^4.15.3",
     "jquery": "^3.2.1",
     "mongoose": "^4.4.15",
-    "multer": "^1.3.0"
+    "multer": "^1.3.0",
+    "q": "^1.5.0"
   },
   "devDependencies": {
     "jasmine": "^2.6.0",
