--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "jquery": "^3.2.1",
     "mongoose": "^4.4.15",
     "multer": "^1.3.0",
-    "q": "^1.5.0"
+    "q": "^1.5.0",
+    "textangular": "^1.5.16"
   },
   "devDependencies": {
     "jasmine": "^2.6.0",
