--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "angular-mocks": "^1.6.4",
     "angular-route": "^1.6.4",
     "body-parser": "^1.15.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.15.3",
+    "express-session": "^1.15.3",
     "jquery": "^3.2.1",
     "mongoose": "^4.4.15",
     "multer": "^1.3.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "q": "^1.5.0",
     "textangular": "^1.5.16"
   },
