--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "express-session": "^1.15.3",
     "jquery": "^3.2.1",
     "mongoose": "^4.4.15",
+    "mongoose-findorcreate": "^2.0.0",
     "multer": "^1.3.0",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
     "q": "^1.5.0",
     "textangular": "^1.5.16"
