--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "angular": "^1.6.4",
     "angular-mocks": "^1.6.4",
     "angular-route": "^1.6.4",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.15.3",
